--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ project(openrigil-usb C ASM)
 add_executable(usbbootrom
     "entry.S"
     "main.c"
+    "device.c"
     "uart.c"
     "flash.c"
     "usbd_conf.c"
@@ -27,8 +28,16 @@ add_definitions(-DLFS_NO_ERROR)
 
 set(USE_MBEDCRYPTO OFF CACHE BOOL "" FORCE)
 set(ENABLE_DEBUG_OUTPUT ON CACHE BOOL "" FORCE)
+set(USBD_PRODUCT_STRING "OpenRigil")
 add_subdirectory(canokey-core)
 
-#target_link_libraries(usbbootrom PRIVATE c m gloss)
+set(gitrev_in git-rev.h.in)
+set(gitrev git-rev.h)
+add_custom_target(gitrev
+        ${CMAKE_COMMAND} -E remove -f ${CMAKE_CURRENT_SOURCE_DIR}/${gitrev}
+        COMMAND ${CMAKE_COMMAND} -E copy ${CMAKE_CURRENT_SOURCE_DIR}/${gitrev_in} ${CMAKE_CURRENT_SOURCE_DIR}/${gitrev}
+        COMMAND git describe --always --tags --long --abbrev=8 --dirty >> ${CMAKE_CURRENT_SOURCE_DIR}/${gitrev}
+        )
+
 target_link_libraries(usbbootrom PRIVATE canokey-core c m gloss)
-#target_link_options(usbbootrom PRIVATE "-Wl,--unresolved-symbols=ignore-in-object-files")
+add_dependencies(usbbootrom gitrev)
