--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,7 +18,7 @@ add_executable(usbbootrom
     "littlefs_api.c"
 )
 
-#add_definitions(-DMBEDTLS_CONFIG_FILE="${CMAKE_CURRENT_SOURCE_DIR}/mbedtls-config.h")
+add_definitions(-DMBEDTLS_CONFIG_FILE="${CMAKE_CURRENT_SOURCE_DIR}/mbedtls-config.h")
 add_definitions(-DDEVICE_CONFIG_FILE="${CMAKE_CURRENT_SOURCE_DIR}/device-config.h")
 
 add_definitions(-DDEBUG_OUTPUT)
@@ -26,7 +26,7 @@ add_definitions(-DLFS_NO_DEBUG)
 add_definitions(-DLFS_NO_WARN)
 add_definitions(-DLFS_NO_ERROR)
 
-set(USE_MBEDCRYPTO OFF CACHE BOOL "" FORCE)
+set(USE_MBEDCRYPTO ON CACHE BOOL "" FORCE)
 set(ENABLE_DEBUG_OUTPUT ON CACHE BOOL "" FORCE)
 set(USBD_PRODUCT_STRING "OpenRigil")
 add_subdirectory(canokey-core)
