Implment RSA4096 sign

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,12 +11,12 @@ add_executable(usbbootrom
     "main.c"
     "bn.c"
     "mmm.c"
-    "mmm_test.c"
+    #"mmm_test.c"
     "25519.c"
-    "25519_test.c"
+    #"25519_test.c"
     "rsa2048.c"
     "rsa4096.c"
-    "rsa_test.c"
+    #"rsa_test.c"
     "device.c"
     "uart.c"
     "flash.c"
